--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -5,6 +5,11 @@ import facebookW from '../images/social/white/facebook.svg';
 import instagramW from '../images/social/white/instagram.svg';
 import tiktokW from '../images/social/white/tiktok.svg';
 import xW from '../images/social/white/x.svg';
+
+export interface Props {
+  blogVariant?: boolean;
+}
+
 ---
 <script is:inline>
   window.addEventListener("DOMContentLoaded",function(){
@@ -43,6 +48,11 @@ import xW from '../images/social/white/x.svg';
 });   
 </script>
 <style is:inline>
+
+.blogText ul li > a {
+    color: white;
+}
+
 .bg-yellow{
     background-color:#ffc031 ;
 }    
@@ -120,11 +130,11 @@ import xW from '../images/social/white/x.svg';
 
 
 </style>
-<nav class="hidden md:block absolute z-50 w-full">
+<nav class:list={["hidden md:block z-50 w-full", Astro.props.blogVariant ? "static bg-black blogText" : "absolute"]}>
     <div class="max-w-screen-xl mx-auto flex justify-between items-center py-8 px-6 ">
         <div>
             <a href="/">
-                <img class="w-56" src={logohb.src} alt="Logotipo Omar Ortega"/>
+                <img class="w-56" src={Astro.props.blogVariant ? logoH.src :logohb.src} alt="Logotipo Omar Ortega"/>
             </a>
         </div>
         <div>
@@ -138,6 +148,12 @@ import xW from '../images/social/white/x.svg';
                 <li>
                     <a class="aunderline whitespace-nowrap" href="/legislativo">
                         Trabajo legislativo
+                        <div class="underline"></div>
+                    </a>
+                </li>
+                <li>
+                    <a class="aunderline whitespace-nowrap" href="/blog">
+                       Noticias
                         <div class="underline"></div>
                     </a>
                 </li>
@@ -162,13 +178,18 @@ import xW from '../images/social/white/x.svg';
         <div>
             <ul class="flex space-x-14 font-semibold">
                 <li>
-                    <a class="aline" href="#">
+                    <a class="aline" href="/trayectoria">
                         Trayectoria
                     </a>
                 </li>
                 <li>
-                    <a class="aline whitespace-nowrap" href="#">
+                    <a class="aline whitespace-nowrap" href="/legislativo">
                         Trabajo legislativo
+                    </a>
+                </li>
+                <li>
+                    <a class="aline whitespace-nowrap" href="/blog">
+                        Noticias
                     </a>
                 </li>
                 <li>
@@ -197,13 +218,18 @@ import xW from '../images/social/white/x.svg';
                     <div class="contain flex flex-col justify-between h-full pb-10">
                         <ul class="ulburger text-2xl space-y-8 font-semibold">
                         <li>
-                            <a class="alineburger " href="#">
+                            <a class="alineburger " href="/trayectoria">
                                 Trayectoria
                             </a>
                         </li>
                         <li>
-                            <a class="alineburger whitespace-nowrap" href="#">
+                            <a class="alineburger whitespace-nowrap" href="/legislativo">
                                 Trabajo legislativo
+                            </a>
+                        </li>
+                        <li>
+                            <a class="alineburger whitespace-nowrap" href="/blog">
+                                Noticias
                             </a>
                         </li>
                         <li>
