--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,18 +1,56 @@
 ---
 import Layoutblog from "../layouts/Layout.astro";
 const allPosts = await Astro.glob("../pages/posts/*.md");
+
+const title = "Noticias relacionadas con Omar Ortega";
 ---
 
-<Layoutblog title="Noticias relacionadas con Omar Ortega">
-    {
-        allPosts.map((post) => (
-
-            <li>
-                <a href={post.url}>
-                    <img src={post.frontmatter.image.url} alt="">
-                    {post.frontmatter.title}
-                </a>
-            </li>
-        ))
+<style>
+    .noticia:hover .nimage {
+        border: 2px solid #ffc031;
     }
+    .noticia {
+        transform: translateY(0);
+        transition: 300ms ease-in-out;
+    }
+    .noticia:hover {
+        transform: translateY(-20px);
+        transition: 300ms ease-in-out;
+    }
+    .yellow-bg {
+        background-color: #ffc031;
+        display: inline-block;
+    }
+</style>
+
+<Layoutblog title={title}>
+    <section>
+        <div class="h-96 flex items-center justify-center bg-yellow-400">
+            <h2 class="uppercase text-center font-semibold text-4xl">Noticias</h2>
+        </div>
+    </section>
+<div class="py-5 lg:px-10">
+    <div class="flex flex-wrap justify-center">
+        {
+            allPosts.map((post) => (
+                <li class="lg:basis-1/3 list-none p-2 noticia">
+                    <a href={post.url}>
+                        <img
+                            class="rounded-xl w-full nimage"
+                            src={post.frontmatter.image.url}
+                            alt={post.frontmatter.image.alt}
+                        />
+                        <div class="yellow-bg px-4 py-1 rounded-full my-2 text-xs">
+                            {post.frontmatter.Date}
+                        </div>
+                        <p class="text-2xl font-semibold lg:pr-4">
+                            {post.frontmatter.title}
+                        </p>
+                    </a>
+                </li>
+            ))
+        }
+    </div>
+</div>
+
 </Layoutblog>
