--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,8 +16,8 @@ import xW from '../images/social/white/x.svg';
                 <p class="pb-2 md:pb-4 pl-2">Teléfono: 722 279 6400 Ext. 6462</p>
                 <div class="flex sm:space-x-2 flex-wrap">
                 <p class="pl-2">Correo electrónico:</p>
-                <a href="">
-                    <p class="pl-2">omar.ortega@gpprdedomex.com</p>
+                <a class="hover:text-yellow-400" href="mailto:omar.ortega@gpprdedomex.com">
+                    <p class="pl-2">omar.ortega@gpprdedomex.com</p> 
                 </a>
                 </div>
                 
