--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -158,7 +158,7 @@ export interface Props {
                     </a>
                 </li>
                 <li>
-                    <a class="aunderline" href="#"
+                    <a class="aunderline" href="/contact"
                         >Contacto
                         <div class="underline"></div>
                     </a>
@@ -193,7 +193,7 @@ export interface Props {
                     </a>
                 </li>
                 <li>
-                    <a class="aline" href="#"
+                    <a class="aline" href="/contact"
                         >Contacto
                     </a>
                 </li>
@@ -233,7 +233,7 @@ export interface Props {
                             </a>
                         </li>
                         <li>
-                            <a class="alineburger" href="#"
+                            <a class="alineburger" href="/contact"
                                 >Contacto
                             </a>
                         </li>
