--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,16 +26,16 @@ import xW from '../images/social/white/x.svg';
         
                 <p class="px-2 py-2 text-slate-300">2024 Omar Ortega Álvarez</p>
                 <div class="flex space-x-6 my-auto md:justify-end pl-2 py-2">
-                    <a href=>
+                    <a href="https://www.facebook.com/omarortegaa.mx">
                         <img class="w-3 icon" src={facebookW.src} alt="Logotipo de facebook">
                     </a>
-                    <a href=>
+                    <a href="https://www.instagram.com/omarortegaa.mx/">
                         <img class="w-4 icon" src={instagramW.src} alt="Logotipo de instagram">
                     </a>
-                    <a href=>
+                    <a href="https://www.tiktok.com/@omarortegaa.mx">
                         <img class="w-4 icon" src={tiktokW.src} alt="Logotipo de tiktok">
                     </a>
-                    <a href="">
+                    <a href="https://twitter.com/OOA_Oficial">
                         <img class="w-4 icon" src={xW.src} alt="Logotipo de x">
                     </a>
                 </div>
