--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -241,16 +241,16 @@ export interface Props {
                         <div>
                         <div class="h-px w-11/12 px-4 bg-white mx-auto line"></div>
                         <div class="flex space-x-6 pt-6 ml-6 items-center">
-                            <a href="">
+                            <a href="https://www.facebook.com/omarortegaa.mx">
                                 <img class="w-2.5 icon" src={facebookW.src} alt="Logotipo de facebook">
                             </a>
-                            <a href="">
+                            <a href="https://www.instagram.com/omarortegaa.mx/">
                                 <img class="w-4 icon" src={instagramW .src} alt="Logotipo de instagram">
                             </a>
-                            <a href="">
+                            <a href="https://www.tiktok.com/@omarortegaa.mx">
                                 <img class="w-4 icon" src={tiktokW.src} alt="Logotipo de tiktok">
                             </a>
-                            <a href="">
+                            <a href="https://twitter.com/OOA_Oficial">
                                 <img class="w-4 icon" src={xW.src} alt="Logotipo de x">
                             </a>
                         </div>
