--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,11 +1,13 @@
 ---
 import Layoutblog from "../layouts/Layout.astro";
+import portada from "../images/blog/portada.jpg";
 const allPosts = await Astro.glob("../pages/posts/*.md");
+
 
 const title = "Noticias relacionadas con Omar Ortega";
 ---
 
-<style>
+<style define:vars={{portada: `url(${portada.src})`}}>
     .noticia:hover .nimage {
         border: 2px solid #ffc031;
     }
@@ -21,18 +23,25 @@ const title = "Noticias relacionadas con Omar Ortega";
         background-color: #ffc031;
         display: inline-block;
     }
+    .portada{
+        background-image: var(--portada);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
 </style>
 
 <Layoutblog title={title}>
     <section>
-        <div class="h-96 flex items-center justify-center bg-yellow-400">
+        <div class="h-96 flex items-center justify-center portada">
             <h2 class="uppercase text-center font-semibold text-4xl">Noticias</h2>
         </div>
     </section>
-<div class="py-5 lg:px-10">
+<div class="py-10 lg:px-10">
     <div class="flex flex-wrap justify-center">
         {
             allPosts.map((post) => (
+                
                 <li class="lg:basis-1/3 list-none p-2 noticia">
                     <a href={post.url}>
                         <img
