--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
     }
 </style>
 
-<Layout title="Welcome to Astro.">
+<Layout title="Omar Ortega">
     <main>
         <section class="one">
             <video loop muted autoplay width="100%" height="100%">
