feat: og:image and description

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -31,7 +31,7 @@ const title = "Noticias relacionadas con Omar Ortega";
     }
 </style>
 
-<Layoutblog title={title}>
+<Layoutblog title={title} description="Mantente actualizado con las últimas novedades y eventos relacionados con Omar Ortega]">
     <section>
         <div class="h-96 flex items-center justify-center portada">
             <h2 class="uppercase text-center font-semibold text-4xl">Noticias</h2>
