--- a/src/pages/legislativo.astro
+++ b/src/pages/legislativo.astro
@@ -13,7 +13,7 @@ import imgTwo from "../images/legislativo/img-2.jpeg";
     }
 </style>
 
-<Layout title="Trabajo legislativo de Omar Ortega">
+<Layout title="Trabajo legislativo de Omar Ortega" description="Conoce el Trabajo lesgislativo de Omar Ortega">
     <section>
         <div class="h-96 flex items-center justify-center bg-yellow-400">
             <h2 class="uppercase text-center font-semibold text-4xl">Trabajo legislativo</h2>
