--- a/src/pages/trayectoria.astro
+++ b/src/pages/trayectoria.astro
@@ -5,7 +5,7 @@ import imgTwo from "../images/trayectoria/img-2.jpeg";
 import imgThree from "../images/trayectoria/img-3.jpeg";
 ---
 
-<Layout title="Trayectoria de omar ortega">
+<Layout title="Trayectoria de omar ortega" description="Conoce la trayectoria de Omar Ortega">
      <section>
           <div class="lg:flex lg:p-32 lg:relative md:pt-24">
                <div class="basis-1/2">
