--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,12 @@
 ---
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
+import og from '../images/og-image.jpeg';
 import '../styles/global.css';
 
 interface Props {
 	title: string;
+	description: string;
 	blogVariant?: boolean;
 }
 
@@ -20,6 +22,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta property="og:image" content={og.src} />
 		<title>{title}</title>
 	</head>
 	<body class="relative">
