--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -29,7 +29,7 @@ import imageV from "../images/contact/image-bg.png";
     
 </style>
 
-<Layout title="Contacta a Omar Ortega">
+<Layout title="Contacta a Omar Ortega" description="Si tienes alguna pregunta, comentario o inquietud, no dudes en hacermelo saber.">
     <section class="flex items-center justify-center bg">
         <div class="my-20">
             <div class="bg-white mx-auto flex flex-col lg:flex lg:flex-row container h-4/5 w-4/5 lg:h-3/5 lg:3/5  max-w-screen-xl">
