--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ interface Props {
 	blogVariant?: boolean;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 
 ---
 
@@ -22,8 +22,8 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<meta property="og:image" content={og.src} />
 		<title>{title}</title>
+		<meta name="description" content={description}>
 	</head>
 	<body class="relative">
 		<Nav blogVariant={Astro.props.blogVariant}/>
