--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -9,7 +9,7 @@ import Layoutblog from "../layouts/Layout.astro";
     }
 </style>
 
-<Layoutblog title={frontmatter.title} blogVariant={true}>
+<Layoutblog title={frontmatter.title} blogVariant={true} description={frontmatter.description}>
     <section>
         <div class="max-w-screen-xl mx-auto my-10">
             <div class="flex justify-center space-x-4 font-regular my-4">
