--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,10 +18,10 @@ const { title, description } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="og:image" content={og.src}>
 		<title>{title}</title>
 		<meta name="description" content={description}>
 	</head>
