--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
-import og from '../images/og-image.jpeg';
+import og from '../images/og-image.jpg';
 import '../styles/global.css';
 
 interface Props {
