--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -123,7 +123,7 @@ import imageV from "../images/contact/image-bg.png";
                                                     const button = document.querySelector("#mailto") as HTMLAnchorElement;
                                                     form.addEventListener('submit', handleSubmit);
 
-                                                    function handleSubmit(event) {
+                                                    function handleSubmit(event: Event) {
                                                         event.preventDefault();
                                                         const formData = new FormData(this);
                                                         console.log(formData.get('nombre'));
