--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -151,7 +151,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                                                 name="nombre"
                                                 id="first-name"
                                                 autocomplete="given-name"
-                                                class="w-full rounded-md border-0 py-1.5 text-gray-900 ring-1 focus:ring-2 ring-gray-300 focus:ring-yellow-400 focus:outline-none sm:text-sm"
+                                                class="w-full rounded-md border-1 border-gray-300 py-1.5 text-gray-900 ring-1 focus:ring-2  ring-gray-300 focus:ring-yellow-400 focus:outline-none sm:text-sm"
                                             />
                                         </div>
                                     </div>
@@ -168,7 +168,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                                                 name="email"
                                                 type="email"
                                                 autocomplete="email"
-                                                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:outline-none focus:ring-yellow-400 sm:text-sm sm:leading-6"
+                                                class="block w-full border-1 border-gray-300  rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:outline-none focus:ring-yellow-400 sm:text-sm sm:leading-6"
                                             />
                                         </div>
                                     </div>
@@ -185,7 +185,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                                                     name="mensaje"
                                                     id="mensaje"
                                                     autocomplete="given-name"
-                                                    class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:outline-none focus:ring-yellow-400 sm:text-sm sm:leading-6"
+                                                    class="block w-full border-1 border-gray-300  rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:outline-none focus:ring-yellow-400 sm:text-sm sm:leading-6"
                                                 ></textarea>
                                             </div>
                                         </div>
