--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,6 +42,9 @@ const limitedPosts = allPosts.slice(0, maxPosts);
     .noticia:hover .nimage {
         border: 2px solid #ffc031;
     }
+    .mensaje{
+        border: #ffc031;
+    }
 </style>
 
 <Layout title="Omar Ortega" description="Conoce de cerca la labor de Omar Ortega en el Estado de México">
