--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,8 @@ const limitedPosts = allPosts.slice(0, maxPosts);
     .noticia:hover .nimage {
         border: 2px solid #ffc031;
     }
-    .mensaje{
-        border: #ffc031;
+    #mensaje{
+        border: 1px solid gray;
     }
 </style>
 
