--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,9 +42,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
     .noticia:hover .nimage {
         border: 2px solid #ffc031;
     }
-    #mensaje{
-        border: 1px solid gray;
-    }
+
 </style>
 
 <Layout title="Omar Ortega" description="Conoce de cerca la labor de Omar Ortega en el Estado de México">
@@ -154,7 +152,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                                                 name="nombre"
                                                 id="first-name"
                                                 autocomplete="given-name"
-                                                class="w-full rounded-md  py-1.5 text-gray-900 ring-1 focus:outline-2  outline-gray-300 focus:outline-yellow-400 sm:text-sm"
+                                                class="w-full rounded-md  py-1.5 text-gray-900 ring-1 focus:ring-2 focus:outline-none  ring-gray-300 focus:ring-yellow-400 sm:text-sm"
                                             />
                                         </div>
                                     </div>
@@ -171,7 +169,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                                                 name="email"
                                                 type="email"
                                                 autocomplete="email"
-                                                class="block w-full rounded-md  py-1.5 text-gray-900 shadow-sm ring-1 ring-inset outline-gray-300 placeholder:text-gray-400 focus:outline-2  focus:outline-yellow-400 sm:text-sm sm:leading-6"
+                                                class="block w-full rounded-md  py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:outline-none focus:ring-yellow-400 sm:text-sm sm:leading-6"
                                             />
                                         </div>
                                     </div>
@@ -188,7 +186,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                                                     name="mensaje"
                                                     id="mensaje"
                                                     autocomplete="given-name"
-                                                    class="block w-full rounded-md  py-1.5 text-gray-900 shadow-sm ring-1 ring-inset outline-gray-300 placeholder:text-gray-400 focus:outline-2  focus:outline-yellow-400 sm:text-sm sm:leading-6"
+                                                    class="block w-full rounded-md py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:outline-none  focus:ring-yellow-400 sm:text-sm sm:leading-6"
                                                 ></textarea>
                                             </div>
                                         </div>
