fix: solid gray

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,6 +43,17 @@ const limitedPosts = allPosts.slice(0, maxPosts);
         border: 2px solid #ffc031;
     }
 
+    @media only screen and (max-width: 1024px) {
+    #mensajes {
+        border: 1px solid gray;
+    }
+    #email{
+        border: 1px solid gray;  
+    }
+    #first-name{
+        border: 1px solid gray;  
+    }
+
 </style>
 
 <Layout title="Omar Ortega" description="Conoce de cerca la labor de Omar Ortega en el Estado de México">
