fix: form border color

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -25,7 +25,17 @@ import imageV from "../images/contact/image-bg.png";
     form{
         padding: 20px;
     }
-
+    @media only screen and (max-width: 1024px) {
+    #mensaje {
+        border: 1px solid gray;
+    }
+    #email{
+        border: 1px solid gray;  
+    }
+    #first-name{
+        border: 1px solid gray;  
+    }
+    }
     
 </style>
 
