--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
         border: 2px solid #ffc031;
     }
     @media only screen and (max-width: 1024px) {
-    #mensajes {
+    #mensaje {
         border: 1px solid gray;
     }
     #email{
