fix: social feed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -98,7 +98,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                 </div>
             </div>
         </section>
-        <script type="text/javascript" src="https://www.juicer.io/embed/omar-ortega-alvarez/embed-code.js per=15" async defer></script>
+        <script type="text/javascript" src="https://www.juicer.io/embed/omar-ortega-alvarez/embed-code.js" async defer></script>
         <section class="lg:my-20">
             <div class="max-w-screen-xl mx-auto">
                 <div>
