fix: social feed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,6 +99,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
             </div>
         </section>
         <script type="text/javascript" src="https://www.juicer.io/embed/omar-ortega-alvarez/embed-code.js" async defer></script>
+        <ul class="juicer-feed" data-feed-id="omar-ortega-alvarez" data-per="15"></ul>
         <section class="lg:my-20">
             <div class="max-w-screen-xl mx-auto">
                 <div>
