fix: ortografia propuestas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,7 +171,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
         <section class="max-w-screen-xl mx-auto">
             <div class="text-center my-10 mx-2">
                 <div class="flex justify-center">
-                    <p>Propuestas 2024 | Dezliza</p>
+                    <p>Propuestas 2024 | Dezlisa</p>
                     <p id="arrow">&rarr;</p>
                 </div>
                 <h2 class="text-4xl font-semibold">
@@ -184,7 +184,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                         <div id="propuestaUno" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
                         <div class="p-4 md:p-10 space-y-4">
                             <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Juticia Hídrica
+                                <span class="text-[#ffd300]">|</span> Justicia Hídrica.
                             </h3>
                             <p>
                                 Esta iniciativa contempla la sensibilización
@@ -201,7 +201,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                         <div class="p-4 md:p-10 space-y-4">
                             <h3 class="font-semibold text-2xl">
                                 <span class="text-[#ffd300]">|</span> Ley de protección y cuidado de los animales del
-                                hogar
+                                hogar.
                             </h3>
                             <p>
                                 México es uno de los países que registra mayor
@@ -221,7 +221,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                         <div class="p-4 md:p-10 space-y-4">
                             <h3 class="font-semibold text-2xl">
                                 <span class="text-[#ffd300]">|</span> Reconocimiento de las personas pepenadoras y sus
-                                derechos laborales
+                                derechos laborales.
                             </h3>
                             <p>
                                 Plantea otorgar reconocimiento y seguridad
@@ -238,7 +238,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                         <div class="p-4 md:p-10 space-y-4">
                             <h3 class="font-semibold text-2xl">
                                 <span class="text-[#ffd300]">|</span> Derechos económicos para las juventudes,
-                                incluyendo el acceso a un empleo digno
+                                incluyendo el acceso a un empleo digno.
                             </h3>
                             <p>
                                 Busca establecer como obligación del Estado
@@ -253,7 +253,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                         <div id="propuestaCinco" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
                         <div class="p-4 md:p-10 space-y-4">
                             <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Ley de fomento al emprendimiento
+                                <span class="text-[#ffd300]">|</span> Ley de fomento al emprendimiento.
                             </h3>
                             <p>
                                 Contempla impulsar el crecimiento económico
@@ -270,7 +270,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                         <div class="p-4 md:p-10 space-y-4">
                             <h3 class="font-semibold text-2xl">
                                 <span class="text-[#ffd300]">|</span> Legalización del uso y portación de armas no
-                                letales para la defensa personal
+                                letales para la defensa personal.
                             </h3>
                             <p>
                                 Ante el aumento de la violencia e inseguridad en
@@ -289,7 +289,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                         <div id="propuestaSiete" class="bg-yellow-400 h-44 md:h-72 rounded-t-xl"></div>
                         <div class="p-4 md:p-10 space-y-4">
                             <h3 class="font-semibold text-2xl">
-                                <span class="text-[#ffd300]">|</span> Alfabetización digital
+                                <span class="text-[#ffd300]">|</span> Alfabetización digital.
                             </h3>
                             <p>
                                 Acortar la brecha digital que existe en nuestro
@@ -307,7 +307,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
                         <div class="p-4 md:p-10 space-y-4">
                             <h3 class="font-semibold text-2xl">
                                 <span class="text-[#ffd300]">|</span> Gratuidad de los estacionamientos; seguro por
-                                robo y daño total o parcial del vehículo
+                                robo y daño total o parcial del vehículo.
                             </h3> 
                             <p>
                                 Los estacionamientos públicos, en su mayoría, no
