--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -171,7 +171,7 @@ const limitedPosts = allPosts.slice(0, maxPosts);
         <section class="max-w-screen-xl mx-auto">
             <div class="text-center my-10 mx-2">
                 <div class="flex justify-center">
-                    <p>Propuestas 2024 | Dezlisa</p>
+                    <p>Propuestas 2024 | Desliza</p>
                     <p id="arrow">&rarr;</p>
                 </div>
                 <h2 class="text-4xl font-semibold">
