--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -149,12 +149,9 @@ const limitedPosts = allPosts.slice(0, maxPosts);
 >
     <main>
         <section class="one">
-            <img
-                src="https://pub-236b6a1111854253bfa86853c8c7d5ae.r2.dev/portada-24.webp"
-                alt="Foto de Omar ortega"
-            />
+           
             <video
-                class="hidden"
+                class=""
                 loop
                 muted
                 autoplay
